--- a/Python/Numpy.ipynb
+++ b/Python/Numpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "fdc8c8e2",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "b4747ec8",
    "metadata": {},
    "outputs": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "665d4661",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "dc742405",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "98ffa749",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
        "array([ 0. ,  2.5,  5. ,  7.5, 10. ])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "c260bbef",
    "metadata": {},
    "outputs": [
@@ -155,19 +155,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "92a7d121",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.37613915, 0.52604176, 0.61993483],\n",
-       "       [0.00390634, 0.23520574, 0.86292052],\n",
-       "       [0.84824461, 0.56858499, 0.97370773]])"
+       "array([[0.84803345, 0.94247168, 0.65253491],\n",
+       "       [0.81540411, 0.12483858, 0.04605737],\n",
+       "       [0.54926001, 0.41270389, 0.5028542 ]])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,19 +179,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "e741a516",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-0.07061194,  0.71196115, -1.16946857],\n",
-       "       [ 0.39950086,  0.45307056,  0.14382247],\n",
-       "       [ 0.43544345, -0.3166096 ,  0.18713934]])"
+       "array([[ 0.04973105,  0.11754554,  2.03373159],\n",
+       "       [-0.88160507, -0.15167201, -2.83413116],\n",
+       "       [ 1.09313917, -1.29700326, -0.48814657]])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,19 +203,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "id": "4efd3bb1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[56, 10, 68],\n",
-       "       [ 2, 13, 91],\n",
-       "       [96, 62, 69]], dtype=int32)"
+       "array([[ 9, 66, 89],\n",
+       "       [34, 41,  1],\n",
+       "       [14, 30, 69]], dtype=int32)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,18 +227,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "id": "6d138fdb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([48, 41, 60, 38,  1, 61, 81, 43, 22, 15, 64, 72, 81, 22, 29],\n",
+       "array([67, 47, 52, 82, 20, 90, 28, 95, 23, 57, 24, 54, 52, 84, 90],\n",
        "      dtype=int32)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,21 +250,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "id": "dab6629b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[48, 41, 60],\n",
-       "       [38,  1, 61],\n",
-       "       [81, 43, 22],\n",
-       "       [15, 64, 72],\n",
-       "       [81, 22, 29]], dtype=int32)"
+       "array([[67, 47, 52],\n",
+       "       [82, 20, 90],\n",
+       "       [28, 95, 23],\n",
+       "       [57, 24, 54],\n",
+       "       [52, 84, 90]], dtype=int32)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,19 +275,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "id": "c898686d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[48, 41, 60, 38,  1],\n",
-       "       [61, 81, 43, 22, 15],\n",
-       "       [64, 72, 81, 22, 29]], dtype=int32)"
+       "array([[67, 47, 52, 82, 20],\n",
+       "       [90, 28, 95, 23, 57],\n",
+       "       [24, 54, 52, 84, 90]], dtype=int32)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "id": "3ed2affc",
    "metadata": {},
    "outputs": [
@@ -306,11 +306,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "81\n",
-      "45.2\n",
-      "1\n",
+      "95\n",
+      "57.666666666666664\n",
+      "20\n",
       "\n",
-      "6\n",
+      "7\n",
       "4\n"
      ]
     }
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "id": "5ff76ca3",
    "metadata": {},
    "outputs": [
@@ -334,7 +334,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n",
+      "7\n",
       "4\n"
      ]
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "id": "83fe6fbc",
    "metadata": {},
    "outputs": [
@@ -381,19 +381,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 17,
    "id": "82c0ab9f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-0.07061194,  0.71196115, -1.16946857],\n",
-       "       [ 0.39950086,  0.45307056,  0.14382247],\n",
-       "       [ 0.43544345, -0.3166096 ,  0.18713934]])"
+       "array([[ 0.04973105,  0.11754554,  2.03373159],\n",
+       "       [-0.88160507, -0.15167201, -2.83413116],\n",
+       "       [ 1.09313917, -1.29700326, -0.48814657]])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,19 +404,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "id": "4028865d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 1, 38, 41, 48, 60],\n",
-       "       [15, 22, 43, 61, 81],\n",
-       "       [22, 29, 64, 72, 81]], dtype=int32)"
+       "array([[20, 47, 52, 67, 82],\n",
+       "       [23, 28, 57, 90, 95],\n",
+       "       [24, 52, 54, 84, 90]], dtype=int32)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "dbaf8d1d",
    "metadata": {},
    "outputs": [
@@ -435,30 +435,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[91 70 22]\n",
-      " [97 73 16]\n",
-      " [92 28 32]\n",
-      " [38 64 61]\n",
-      " [36 66 45]\n",
-      " [62 48 25]]\n",
+      "[[21 70 76]\n",
+      " [63 47 83]\n",
+      " [67 77 75]\n",
+      " [42 67 19]\n",
+      " [61 27 12]\n",
+      " [43 39 78]]\n",
       "\n",
       "2\n",
       "(6, 3)\n",
       "\n",
-      "[[91 97 92 38 36 62]\n",
-      " [70 73 28 64 66 48]\n",
-      " [22 16 32 61 45 25]]\n",
+      "[[21 63 67 42 61 43]\n",
+      " [70 47 77 67 27 39]\n",
+      " [76 83 75 19 12 78]]\n",
       "\n",
-      "[[22 70 91]\n",
-      " [16 73 97]\n",
-      " [28 32 92]\n",
-      " [38 61 64]\n",
-      " [36 45 66]\n",
-      " [25 48 62]]\n",
+      "[[21 70 76]\n",
+      " [47 63 83]\n",
+      " [67 75 77]\n",
+      " [19 42 67]\n",
+      " [12 27 61]\n",
+      " [39 43 78]]\n",
       "\n",
-      "[[36 38 62 91 92 97]\n",
-      " [28 48 64 66 70 73]\n",
-      " [16 22 25 32 45 61]]\n"
+      "[[21 42 43 61 63 67]\n",
+      " [27 39 47 67 70 77]\n",
+      " [12 19 75 76 78 83]]\n"
      ]
     }
    ],
@@ -483,19 +483,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 20,
    "id": "641a100c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[8, 5, 6],\n",
-       "       [1, 3, 7],\n",
-       "       [5, 5, 2]], dtype=int32)"
+       "array([[4, 9, 6],\n",
+       "       [1, 6, 9],\n",
+       "       [4, 6, 3]], dtype=int32)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 21,
    "id": "b3fcf405",
    "metadata": {},
    "outputs": [
@@ -515,7 +515,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[8 6 7]\n"
+      "[9 6 6 9 6]\n"
      ]
     }
    ],
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 22,
    "id": "2b50a2d3",
    "metadata": {},
    "outputs": [
@@ -533,7 +533,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5 1 3 7 5 5]\n"
+      "[9 1 9 3]\n"
      ]
     }
    ],
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 23,
    "id": "f50350a4",
    "metadata": {},
    "outputs": [
@@ -551,7 +551,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5 6 3 7 5 5]\n"
+      "[4 6 6 4 6 3]\n"
      ]
     }
    ],
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 24,
    "id": "d3da63ab",
    "metadata": {},
    "outputs": [
@@ -574,7 +574,7 @@
        "       [37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48]])"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 25,
    "id": "c6d1c13c",
    "metadata": {},
    "outputs": [
@@ -607,7 +607,7 @@
        "        [45, 46, 47, 48]])]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 26,
    "id": "dd3c6c0f",
    "metadata": {},
    "outputs": [
@@ -631,7 +631,7 @@
        "        [37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48]])]"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,11 +642,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "a54fe36e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(7.864000000000001)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions = [1, 2, 4, 5, 1, 3, 2, 4, 1.2, 0]\n",
+    "label = [0, 3, 1, 2, 3, 1, 5, 6, 7 , 2]\n",
+    "\n",
+    "npreds = np.array(predictions)\n",
+    "nlabel = np.array(label)\n",
+    "\n",
+    "n = len(predictions)\n",
+    "\n",
+    "avg = (1/n) * np.sum(np.square(npreds - nlabel))\n",
+    "\n",
+    "avg"
+   ]
   }
  ],
  "metadata": {
